Thu Oct  7 16:15:15 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixed a problem of tree structure raised
	  by the new libxml2 tree checking code.

Thu Sep 30 11:28:03 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: fixed problem with negative periods
	  (bug 154021)
	* tests/exslt/date/sum.2.out: changed expected output, now
	  agrees with comments in sum.2.xml test data file
	  
Thu Sep 30 08:19:28 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/templates.c: patch from Mark Vakoc about an incorrect
	  attribute document pointer.

Thu Sep 30 08:13:57 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* doc/tutorial2/libxslt_pipes.*: updated the tutorial from Panagiotis
	  Louridas

Thu Sep 30 00:10:09 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* configure.in doc/*: release of 1.1.11, rebuilt the docs

Wed Sep 29 15:42:33 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: try to fix #153137 but without a test case
	  it's shooting in the dark.

Tue Sep 28 16:20:48 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* doc/tutorial2/libxslt_pipes.*: New tutorial from Panagiotis Louridas
	* libxslt.spec.in doc/Makefile.am: integrated the tutorial in the
	  distribution

Sat Sep 25 21:38:57 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/preproc.c libxslt/variables.c: fixed 2 leaks with
	  namespaced variable names.
	* tests/general/bug-154.*, tests/general/Makefile.am,
	  tests/docs/bug-154*, tests/docs/Makefile.am: added test case
	  for above

Fri Sep 24 18:13:45 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* Makefile.am: add missing variable
	* libxslt/transform.c: fixed some error callback data
	* tests/exslt/date/Makefile.am tests/exslt/date/sum*: added new
	  date:sum testing from Derek Poon

Fri Sep 24 09:17:22 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: fixed problem with empty sets, etc.
	  (see discussion on mailing list)
